--- a/index.html
+++ b/index.html
@@ -6,6 +6,26 @@
 </head>
 <body>
 
+  <h1>Header 1</h1>
+  <br>
+  <br>
+  <h2>Header 2</h2>
+   <br>
+  <br>
+  <h3>Header 3</h3>
+   <br>
+  <br>
+  <h4>Header 4</h4>
+   <br>
+  <br>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium earum temporibus veniam quam dicta odit quas. Dolorum, id porro natus veritatis ad tempore, provident est, in esse doloribus voluptatem dolor voluptatum et sunt? Amet, iure sapiente! Odit nobis, nesciunt possimus quaerat, officia dolorum ab ratione quisquam id deserunt animi asperiores quos voluptatem dolore suscipit eveniet consectetur unde ducimus. Rem libero reprehenderit excepturi blanditiis. Illum necessitatibus hic, corporis explicabo ipsa, quis, inventore mollitia error modi repellendus expedita adipisci cupiditate eum excepturi!</p>
+ <br>
+  <br>
+
+<div class="box1"></div>
+<br>
+<br>
+<div class="box2"></div>
 
   <script src="js/index.js"></script>
 </body>
