--- a/index.html
+++ b/index.html
@@ -1,10 +1,23 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 
 <head>
   <link href="css/reset.css" rel="stylesheet" />
   <link href="css/style.css" rel="stylesheet" />
 </head>
 <body>
+
+
+    <nav>
+    <a href="#" class="logo">LOGO</a>
+    <div class="nav-right">
+      <a href="#">Home</a>
+      <a href="#">About</a>
+      <a href="#">Work</a>
+      <a href="#">Castingproject</a>
+      <a href="#">Our Talent</a>
+      <a href="#" class="register-btn">Register as a Talent</a>
+    </div>
+  </nav>
 
   <h1>Header 1</h1>
   <br>
@@ -22,10 +35,20 @@
  <br>
   <br>
 
+   <button class="knop">Klik hier</button>
+   <br>
+  <br>
+   <button class="knop2">Klik hier</button>
+   <br>
+  <br>
+
 <div class="box1"></div>
 <br>
 <br>
 <div class="box2"></div>
+<br>
+<br>
+<div class="box3"></div>
 
   <script src="js/index.js"></script>
-</body>
+</body> -->
