--- a/index.html
+++ b/index.html
@@ -1,54 +1,28 @@
-<!-- <!DOCTYPE html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <link href="css/reset.css" rel="stylesheet" />
-  <link href="css/style.css" rel="stylesheet" />
+   <meta charset="UTF-8">
+  <title>website
+  </title>
+  <link href="./css/reset.css" rel="stylesheet" type="text/css" />
+  <link href="./css/main.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 
 
-    <nav>
-    <a href="#" class="logo">LOGO</a>
-    <div class="nav-right">
-      <a href="#">Home</a>
-      <a href="#">About</a>
-      <a href="#">Work</a>
-      <a href="#">Castingproject</a>
-      <a href="#">Our Talent</a>
-      <a href="#" class="register-btn">Register as a Talent</a>
+  <div class="navbar">
+        <div class="logo">
+            <img src="./images/gigifilms_logo_wit.png" alt="Gigifilms Logo">
+        </div>
+        <div class="nav-links">
+            <a href="#">about</a>
+            <a href="#">work</a>
+            <a href="#">castingproject</a>
+            <a href="#">our talent</a>
+             <a href="#">register as a talent</a> 
     </div>
-  </nav>
 
-  <h1>Header 1</h1>
-  <br>
-  <br>
-  <h2>Header 2</h2>
-   <br>
-  <br>
-  <h3>Header 3</h3>
-   <br>
-  <br>
-  <h4>Header 4</h4>
-   <br>
-  <br>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium earum temporibus veniam quam dicta odit quas. Dolorum, id porro natus veritatis ad tempore, provident est, in esse doloribus voluptatem dolor voluptatum et sunt? Amet, iure sapiente! Odit nobis, nesciunt possimus quaerat, officia dolorum ab ratione quisquam id deserunt animi asperiores quos voluptatem dolore suscipit eveniet consectetur unde ducimus. Rem libero reprehenderit excepturi blanditiis. Illum necessitatibus hic, corporis explicabo ipsa, quis, inventore mollitia error modi repellendus expedita adipisci cupiditate eum excepturi!</p>
- <br>
-  <br>
 
-   <button class="knop">Klik hier</button>
-   <br>
-  <br>
-   <button class="knop2">Klik hier</button>
-   <br>
-  <br>
-
-<div class="box1"></div>
-<br>
-<br>
-<div class="box2"></div>
-<br>
-<br>
-<div class="box3"></div>
-
-  <script src="js/index.js"></script>
-</body> -->
+  
+</body>
+</html>
