banner + stukje onderste pagina gemaakt

--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
    <meta charset="UTF-8">
-  <title>website
-  </title>
+  <title>website</title>
   <link href="./css/reset.css" rel="stylesheet" type="text/css" />
   <link href="./css/main.css" rel="stylesheet" type="text/css" />
 </head>
@@ -21,6 +20,42 @@
             <a href="#">our talent</a>
              <a href="#">register as a talent</a> 
     </div>
+     </div>
+
+
+
+ <main>
+        <div class="grid1">
+         
+         <img src="./images/liam2.png" alt="liam">
+
+         <p>GIGIFILMS</p>
+         <p>Gigi Casting focuses on streetcasting. Aiming for more diversity and authenticity on screen. GIGI Casting guides new talent before set, supports talent on set and counsels talent after
+         set in taking the next steps towards a artistic practice.</p>
+
+        <a href="#" class="casting-button">GIGI casting</a>
+
+         <p>Info</p>
+
+        </div>
+
+
+
+<div class="grid2">
+
+  <img src="./images/ZohraBenhammouRomyMana.JPG" alt="zbr">
+  <p>Zohra Benhammou & Romy Mana </p>
+  <p>are a filmmakers duo based in Brussels. 
+Their creative partnership began by chance and blossomed into their debut feature documentary, Ana + Yek (Me + You).<br><br> <br>
+
+As writers and directors, they work beyond genres and formats, exploring (auto)biography, relational dynamics, spaces and places. They seek honest, direct images, always prioritizing relevance and sincerity in their playful, intuitive approach. </p>
+
+</div>
+
+
+
+</main>
+
 
 
   
