casting pagina af

--- a/index.html
+++ b/index.html
@@ -9,18 +9,20 @@
 <body>
 
 
-  <div class="navbar">
-        <div class="logo">
+ <div class="navbar">
+    <div class="logo">
+        <a href="./index.html">
             <img src="./images/gigifilms_logo_wit.png" alt="Gigifilms Logo">
-        </div>
-        <div class="nav-links">
-            <a href="#">about</a>
-            <a href="#">work</a>
-            <a href="#">castingproject</a>
-            <a href="#">our talent</a>
-             <a href="#">register as a talent</a> 
+        </a>
     </div>
-     </div>
+    <div class="nav-links">
+        <a href="#">about</a>
+        <a href="#">projecten</a>
+        <a href="./casting.html">casting</a>
+        <a href="#">our talent</a>
+        <a href="#">register as a talent</a> 
+    </div>
+</div>
 
 
 
@@ -35,7 +37,7 @@
 
         <a href="#" class="casting-button">GIGI casting</a>
 
-         <p>Info</p>
+
 
         </div>
 
@@ -50,9 +52,25 @@ Their creative partnership began by chance and blossomed into their debut featur
 
 As writers and directors, they work beyond genres and formats, exploring (auto)biography, relational dynamics, spaces and places. They seek honest, direct images, always prioritizing relevance and sincerity in their playful, intuitive approach. </p>
 
+
+ <a href="#" class="casting-button2">About</a>
+
+
+
 </div>
 
-
+ <div class="navbar">
+        <div class="logo">
+            <img src="./images/gigifilms_logo_wit.png" alt="Gigifilms Logo">
+        </div>
+        <div class="nav-links">
+            <a href="#">about</a>
+            <a href="#">projecten</a>
+            <a href="#">casting</a>
+            <a href="#">our talent</a>
+             <a href="#">register as a talent</a> 
+    </div>
+     </div>
 
 </main>
 
