register pagina af

--- a/casting.html
+++ b/casting.html
@@ -18,9 +18,9 @@
     <div class="nav-links">
         <a href="#">about</a>
         <a href="#">projecten</a>
-        <a href="#">casting</a>
+        <a href="./casting.html">casting</a>
         <a href="#">our talent</a>
-        <a href="#">register as a talent</a> 
+        <a href="./register.html">register as a talent</a> 
     </div>
 </div>
 
