--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a href="#">projecten</a>
         <a href="./casting.html">casting</a>
         <a href="#">our talent</a>
-        <a href="#">register as a talent</a> 
+        <a href="./register.html">register as a talent</a> 
     </div>
 </div>
 
