--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
    <meta charset="UTF-8">
   <title>website</title>
   <link href="./css/reset.css" rel="stylesheet" type="text/css" />
-  <link href="./css/register.css" rel="stylesheet" type="text/css" />
+  <link href="./css/login.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 
@@ -28,42 +28,14 @@
 
 <div class="grid1">
          
-<p>Make an account</p>
-<p>Last name:*</p>
-<p>Name:*</p>
-<input type="text" placeholder="Last name" />
-<input type="text" placeholder="Name" />
-
-<p>Adress:*</p>
-<input type="text" placeholder="Adress" />
-<p>ZIP-code:*</p>
-<p>City:*</p>
-<input type="text" placeholder="ZIP-code" />
-<input type="text" placeholder="City" />
-<p>Day/Month/Year:*</p>
-<p>Language:*</p>
-<p>Nationality:*</p>
-<input type="text" placeholder="Day/Month/Year" />
-<input type="text" placeholder="Language" />
-<input type="text" placeholder="Nationality" />
-<p>E-mail:*</p>
+<p>Login</p>
+<p>E-mail:</p>
 <input type="text" placeholder="E-mail" />
-<p>Password:*</p>
-<p>Confirm Password:*</p>
+<p>Password:</p>
 <input type="text" placeholder="Password" />
-<input type="text" placeholder="Confirm Password" />
-<p>Upload Picture:*</p>
-<p>Upload Video:</p>
-<p>Upload Motivation:</p>
-<input type="text" placeholder="Upload Picture" />
-<input type="text" placeholder="Upload Video" />
-<input type="text" placeholder="Upload Motivation" />
 
-
-  <button class="btn-outline">Register</button>
-  <button class="btn-filled">Login</button>
-
-
+ <a href="./register.html" class="btn-outline">Register</a>
+  <a href="./login.html" class="btn-filled">Login</a>
 
 </div>
 
