--- a/register.html
+++ b/register.html
@@ -60,9 +60,8 @@
 <input type="text" placeholder="Upload Motivation" />
 
 
-  <button class="btn-outline">Register</button>
-  <button class="btn-filled">Login</button>
-
+   <a href="./register.html" class="btn-outline">Register</a>
+  <a href="./login.html" class="btn-filled">Login</a>
 
 
 </div>
