desktop bijna/ af

--- a/register.html
+++ b/register.html
@@ -16,10 +16,10 @@
         </a>
     </div>
     <div class="nav-links">
-        <a href="#">about</a>
-        <a href="#">projecten</a>
+        <a href="./about.html">about</a>
+        <a href="./project.html">projecten</a>
         <a href="./casting.html">casting</a>
-        <a href="#">our talent</a>
+        <a href="./talents.html">our talent</a>
         <a href="./register.html">register as a talent</a> 
     </div>
 </div>
@@ -76,11 +76,11 @@
         </a>
     </div>
     <div class="nav-links">
-        <a href="#">about</a>
-        <a href="#">projecten</a>
-        <a href="#">casting</a>
-        <a href="#">our talent</a>
-        <a href="#">register as a talent</a> 
+        <a href="./about.html">about</a>
+        <a href="./project.html">projecten</a>
+        <a href="./casting.html">casting</a>
+        <a href="./talents.html">our talent</a>
+        <a href="./register.html">register as a talent</a> 
     </div>
 </div>
 
