--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         </a>
     </div>
     <div class="nav-links">
-        <a href="#">about</a>
-        <a href="#">projecten</a>
+        <a href="./about.html">about</a>
+        <a href="./project.html">projecten</a>
         <a href="./casting.html">casting</a>
-        <a href="#">our talent</a>
+        <a href="./talents.html">our talent</a>
         <a href="./register.html">register as a talent</a> 
     </div>
 </div>
@@ -35,7 +35,7 @@
          <p>Gigi Casting focuses on streetcasting. Aiming for more diversity and authenticity on screen. GIGI Casting guides new talent before set, supports talent on set and counsels talent after
          set in taking the next steps towards a artistic practice.</p>
 
-        <a href="#" class="casting-button">GIGI casting</a>
+        <a href="./casting.html" class="casting-button">GIGI casting</a>
 
 
 
@@ -53,7 +53,7 @@ Their creative partnership began by chance and blossomed into their debut featur
 As writers and directors, they work beyond genres and formats, exploring (auto)biography, relational dynamics, spaces and places. They seek honest, direct images, always prioritizing relevance and sincerity in their playful, intuitive approach. </p>
 
 
- <a href="#" class="casting-button2">About</a>
+ <a href="./about.html" class="casting-button2">About</a>
 
 
 
