tekst + margin aangepast

--- a/about.html
+++ b/about.html
@@ -30,25 +30,25 @@
 <main>
 <div id="home" class="grid1">
  
-<p>ZOHRA BENHAMMOU</p>
+<h2>Zohra Benhammou</h2>
  
 <p>Zohra Benhammou (1994, Brussels) is a Belgian-Moroccan filmmaker. Drawing on her background, she delves into the subtleties of personal narratives and heritage. Through her
    work she aims to convey the nuances of culture, religion and
    identity, weaving connections that bridge different realms and fostering understanding.</p>
  
-   <div class="foto2">
-            <img src="./images/Schermafbeelding 2025-02-11 om 21.47.18.png"> </div>
+   
+            <img src="./images/Schermafbeelding 2025-02-11 om 21.47.18.png"> 
  
-<p>ROMY MANA</p>
+<h2>Romy Mana</h2>
 <p>Romy Mana (Born Romy Vanderveken, 1994, Brussels) primarily works with performance, sculpture, writing, video and film. In many cases her work combines aspects of different media, blurring boundaries between conventionally distinct categories. She works with a content that can vary from being very personal, a memory, notions of her heritage to the more
    universal, notions of displacement and loss, finding ways of representing through shifts, ruptures of the visual and linguistic forms of her works.
 </p>
  
- 
-<div class="foto3">
-    <img src="./images/Schermafbeelding 2025-02-11 om 21.47.34.png"></div>
+
+    <img src="./images/Schermafbeelding 2025-02-11 om 21.47.34.png">
  
 <div class="lijn"></div>  
+
  
 <div class="navbar2">
         <div class="logo">
