--- a/casting.html
+++ b/casting.html
@@ -29,7 +29,7 @@
 
 <div class="grid1">
          
-<p>PUTAIN</p>
+<h2>Putain</h2>
 <p>a series by: Deben Van Dam<br>
 written by: Gorik van Oudheusden, Frederik Daem, Deben Van Dam, Nadège Bibo-Tansia<br>
 with: Liam Jacmin, Felix Heremans, Hind, Victoria Djamusala, Laura Darnovsky, Pierre Boeraeve<br>
@@ -46,7 +46,7 @@ produced by: Kristoffel Mertens, Panenka</p>
          
 <img src="./images/skiff.jpg" alt="skiff">
 
-<p>SKIFF</p>
+<h2>Skiff</h2>
 <p>a film by: Cecilia Verheyden<br>
 with: Lina Miftah<br>
 written by: Cecilia Verheyden, Vincent Vanneste<br>
