--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
          
          <img src="./images/liam2.png" alt="liam">
 
-         <p>GIGIFILMS</p>
+         <h1>Gigicasting</h1>
          <p>Gigi Casting focuses on streetcasting. Aiming for more diversity and authenticity on screen. GIGI Casting guides new talent before set, supports talent on set and counsels talent after
          set in taking the next steps towards a artistic practice.</p>
 
@@ -46,7 +46,7 @@
 <div class="grid2">
 
   <img src="./images/ZohraBenhammouRomyMana.JPG" alt="zbr">
-  <p>Zohra Benhammou & Romy Mana </p>
+  <h2>Zohra Benhammou & Romy Mana </h2>
   <p>are a filmmakers duo based in Brussels. 
 Their creative partnership began by chance and blossomed into their debut feature documentary, Ana + Yek (Me + You).<br><br> <br>
 
