--- a/project.html
+++ b/project.html
@@ -30,7 +30,7 @@
 <main>
         <div id="home" class="grid1">
  
-           <p>Ana + yek</p>
+           <h2>Ana + Yek</h2>
           <div class="lijn">  </div>
             <p> Ana + Yek (Me + You) follows twin sisters Sanaa and Zohra. What begins as Zohra’ exploration of their Moroccan heritage gradually reveals the shifting dynamics of their relationship,
                 as Sanaa’s deepening love for Islam becomes more apparent. The film unfolds as a journey of mutual understanding — a cinematic dialogue fueled by their desire to connect. An intimate portrait of sisterly love and independence.</p>
@@ -45,7 +45,7 @@
               in cooperation with:  Cinemaximiliaan
               Belgian release with: the support of Darna</p>
  
-              <p>rupture</p>
+              <h2>Rupture</h2>
  
               <div class="lijn"></div>
  
