--- a/index.html
+++ b/index.html
@@ -3,27 +3,34 @@
 <head>
    <meta charset="UTF-8">
   <title>website</title>
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="./css/reset.css" rel="stylesheet" type="text/css" />
   <link href="./css/main.css" rel="stylesheet" type="text/css" />
+  <script href="./js/index.js"></script>
 </head>
 <body>
 
 
- <div class="navbar">
-    <div class="logo">
-        <a href="./index.html">
-            <img src="./images/gigifilms_logo_wit.png" alt="Gigifilms Logo">
-        </a>
-    </div>
-    <div class="nav-links">
-        <a href="./about.html">about</a>
-        <a href="./project.html">projecten</a>
-        <a href="./casting.html">casting</a>
-        <a href="./talents.html">our talent</a>
-        <a href="./register.html">register as a talent</a> 
-    </div>
+ 
+<div class="navbar">
+  <div class="logo">
+    <a href="./index.html">
+      <img src="./images/gigifilms_logo_wit.png" alt="Gigifilms Logo">
+    </a>
+  </div>
+  <div class="menu-toggle" id="menu-toggle">
+    ☰
+  </div>
+  <div class="nav-links" id="nav-links">
+    <a href="./about.html">about</a>
+    <a href="./project.html">projecten</a>
+    <a href="./casting.html">casting</a>
+    <a href="./talents.html">our talent</a>
+    <a href="./register.html">register as a talent</a>
+  </div>
 </div>
-
+ 
+ 
 
 
  <main>
